--- a/_posts/2021-07-17-data type.md
+++ b/_posts/2021-07-17-data type.md
@@ -133,6 +133,12 @@ toc: true
 * #### 특징
 
     null과 undefined가 해당
+    
+    undefined: 변수가 할당되지 않았을 때의 초기값
+
+    null: 무언가를 검색했을 때 그에 해당되는 값을 찾지 못했을 때
+          **아무것도 없음**을 나타내는 값
+
 
     - 값을 아직 할당하지 않은 변수의 값
 
