--- a/_posts/2021-07-18-object.md
+++ b/_posts/2021-07-18-object.md
@@ -16,10 +16,146 @@ toc: true
     
     - 복합데이터로, 연관배열 또는 사전이라고도 부름
 
-    - 프로퍼티란 이름과 값의 쌍을 의미하며, 객체에서 데이터 하나를 프로퍼티라고 부름
+    - 프로퍼티란 이름과 값의 쌍을 의미하며, 객체에서 데이터 하나를  프로퍼티라고 부름
+    
+
+![KakaoTalk_20210718_231718849](https://user-images.githubusercontent.com/83913407/126070817-5fcdb734-b6f0-4e5d-8190-80e1b3f5aa26.jpg)
 
 ---
 
 ### 객체리터럴
 
+* #### 객체리터럴의 특징 
 
+1.  {...}부분이 **객체리터럴**에 해당되며, 객체 리터럴을 변수 person에 대입 
+
+``` javascript
+var person = {name: "최은진", sex: "female"};
+```
+
+2. 객체의 프로퍼티 값으로 **객체**를 대입할 수 있음
+```javascript
+var circle ={
+    center : {x:1.0, y:2.0};
+    radius :2.5;
+};
+```
+
+3. 객체는 참조타입
+객체를 변수에 할당하면 그 변수에는 객체의 메모리에서의 위치정보가 저장
+
+이를 **변수가 객체를 참조하고 있다**라고 함.
+
+
+---
+
+### 프로퍼티
+
+* #### 프로퍼티의 특징
+
+1. 프로퍼티 이름(키)는 식별자와 문자열 리터럴 사용 가능
+
+``` javascript
+var person = {"name: "최은진", "sex": "female"};
+```
+
+2. 프로퍼티 값을 읽을 때는 마침표(.)연산자 또는 대괄호([])연산자를 사용
+
+
+    마침표 연산자: 프로퍼티 이름 = 식별자
+    
+    대괄호 연산자: 프로퍼티 이름 = 문자열 
+
+```javascript
+person.name
+person.["sex"]
+```
+
+* #### 프로퍼티 추가 및 삭제
+
+Javascript는 실행 중에 프로퍼티를 자유롭게 삭제하거나 추가할 수 있지만, Java나 C++은 실행 중에 추가나 삭제하는 것이 불가능함!
+
+
+**추가**) 기존에 없는 프로퍼티 이름에 값을 대입
+```javascript
+person.age = 23;
+```
+
+
+**삭제**) **delete연산자를 이용
+```javascript
+delete person.name;
+```
+
+* in 연산자
+
+    객체 안 특정 프로퍼티가 존재하는지를 확인할 때 사용
+    ```javascript
+    var person = {name: "최은진", age:23};
+    console.log("name" in person) // -> true
+    console.log("sex" in person) // -> false
+    ```
+
+* #### 매서드
+
+프로퍼티 값의 타입이 함수인 경우 그 프로퍼티를 매서드라 함 
+
+---
+
+ ### 생성자
+
+* #### 정의 
+new연산자를 이용하여 객체를 생성할 것이라고 기대하고 만든 함수
+
+
+* #### 생성자의 특징 
+
+1.같은 프로퍼티를 갖는 객체를 여러 개 생성
+
+2.Java와 C++에서의 클래스(class)와 **유사** [자바스크립트에는 class가 존재하지 않음]
+
+3.생성자를 이용하여 객체를 생성할 때 **new 연산자** 이용
+
+4.생성자와 new연산자를 이용하여 만든 객체를 그 생성자의 인스턴스라고 지칭
+
+5.이름은 같지만 값이 다른 여러개의 프로퍼티들을 간편하게 생성할 수 있음 
+
+```javascript
+function Person(name,age){
+    this.name = name; // -> this는 생성될 인스턴스(person)을 지칭
+    this.rank = age;
+}
+
+var person = new Person("최은진",23);
+console.log(person) //-> person(name: "최은진", age: 23);
+```
+
+---
+
+### 내장객체(내장 생성자)
+
+자바스크립트에서 기본적으로 내장되어 있는 객체(생성자로 사용)로, new연산자를 이용하여 객체를 생성하여 다양한 작업을 쉽게 할 수 있음
+
+* #### Date생성자
+
+```javascript
+var now = new Date();
+```
+
+
+Date생성자가 제공하는 주요 메서드
+
+    
+    - now.getFullYear() // -> 연도 값
+    
+    - now.getMonth() // -> 월 값 (0부터 시작하므로 실제 월은 +1 해줘야함)
+    
+    - now.getDate() 
+    
+    - now.getDay()
+
+    - now.toLocaleString() // -> 지역화된 날짜와 시간 정보
+    
+    - now.toLocaleDateString()
+
+    - now.toLocaleTimeString() 
