--- a/_posts/2021-07-21-event.md
+++ b/_posts/2021-07-21-event.md
@@ -81,12 +81,65 @@ toc: true
 </html>
 ```
 
+
 ---
     
   * #### addEventListener매서드를 사용
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        window.onload = function(){
+            var button = document.getElementById('button');
+            var result = document.getElementById('result');
+           button.addEventListener('click', function(){
+               var now = new Date();
+               result.innerHTML = now.toLocaleString();
+           });
+        }
+    </script>
+</head>
+<body>
+    <p>오늘의 날짜와 시간 확인</p>
+    <input type= "button" id="button" value = "확인하기">
+    <p id = "result"></p>
+    
+</body>
+</html>
 
 
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        window.onload = function(){
+            var button = document.getElementById('button');
+            var result = document.getElementById('result');
+           button.addEventListener('click', function(){
+               var now = new Date();
+               result.innerHTML = now.toLocaleString();
+           });
+        }
+    </script>
+</head>
+<body>
+    <p>오늘의 날짜와 시간 확인</p>
+    <input type= "button" id="button" value = "확인하기">
+    <p id = "result"></p>
+    
+</body>
+</html>
+```
 
 
 ---
@@ -124,3 +177,64 @@ button.onclick = null;
 
 이벤트 처리기로 등록되어 있는 않은 이벤트 처리기 프로퍼티에는 기본적으로 **null**이라는 함수 값이 담겨있음.
 
+
+---
+
+* #### 체질량 지수구하기 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        window.onload = function(){
+            document.getElementById("button").onclick = function(){
+                var h = parseFloat(document.getElementById("height").value);
+                var transH = h * 0.01
+                var w = parseFloat(document.getElementById("weight").value);
+                var bmi = document.getElementById("bmi");
+                bmi.innerHTML = (w/transH/transH).toFixed(1);
+            };
+        };
+    </script>
+</head>
+<body>
+<p>키: <input type="number" id="height">m</p>
+<p>몸무게: <input type="number" id="weight">kg</p>
+<p>당신의 체질량 지수는 <output id="bmi">?</output>입니다</p>
+<input type="button" id="button" value="계산">
+</body>
+</html>
+
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        window.onload = function(){
+            document.getElementById("button").onclick = function(){
+                var h = parseFloat(document.getElementById("height").value);
+                var transH = h * 0.01
+                var w = parseFloat(document.getElementById("weight").value);
+                var bmi = document.getElementById("bmi");
+                bmi.innerHTML = (w/transH/transH).toFixed(1);
+            };
+        };
+    </script>
+</head>
+<body>
+<p>키: <input type="number" id="height">m</p>
+<p>몸무게: <input type="number" id="weight">kg</p>
+<p>당신의 체질량 지수는 <output id="bmi">?</output>입니다</p>
+<input type="button" id="button" value="계산">
+</body>
+</html>
+```
