--- a/_posts/2021-07-19-function.md
+++ b/_posts/2021-07-19-function.md
@@ -21,6 +21,63 @@ toc: true
 2. 반환값: 함수의 출력 값
 
 ---
+
+* #### 함수 정의 방법 4가지
+
+1. 함수 선언문으로 정의
+
+   ```
+   function square(x) { return x*x };
+   ```
+
+2. 함수 리터럴로 정의
+
+    ```
+    var square = function(x) {return x*x};
+    ```
+
+3. Function 생성자로 정의
+
+    ```
+    var square = new Function(x) {return x*X};
+    ```
+
+4. 화살표 함수 표현식으로 정의(ECMAScript 6부터 추가됨)
+
+    ```
+    var square = x => x*x;
+    ```
+
+**함수 선언문으로 정의된 함수는 호출문보다 뒤에 위치해 있더도 앞으로 hosting되지만, 나머지 방법을 사용하기 위해서는 함수를 정의하는 코드가 반드시 호출문보다 앞에 위치해 있어야 함**
+
+---
+
+* #### 함수 호출 방법 4가지
+
+1. 함수 호출 
+
+```
+var s = square(5);
+```
+
+2. 매서드 호출
+객체의 프로퍼티에 저장(프로퍼티 저장 값이 함수 타입이면 그것을 매서드라 함)
+
+```
+obj.m = function() {...};
+obj.m();
+```
+
+3. 생성자 호출
+
+```
+var obj = new Object();
+```
+
+4. call, apply를 사용한 간접호출
+
+---
+
 * #### 함수의 실행흐름
 
     - 인수가 함수 정의문의 인자에 대입된다.
@@ -129,4 +186,58 @@ var parameters = {
     radius:5
 };
 circulation(parameters);
+```
+
+* #### 중첩함수 Nested Function
+
+-함수 내부에 선언된 함수 
+
+-지역함수 또는 내부함수(Inner function)라고도 부름
+
+-C나 Java에서는 중첩함수 사용이 불가능하지만, 자바스크립트에서는 가능
+
+-함수 안의 if문이나 while문 등의 문장 블록 **안**에서는 사용이 불가능 
+
+
+```
+function norm(x){
+    var sum2 = sumsquare();
+    return Math.sqrt(sum2);
+    function sumsquare(){
+        sum = 0;
+        for(var i=0; i<x.length;i++){
+            sum += x[i]*x[i];
+            return sum;
+        }
+    }
+}
+var a = [2,1,3,5,7];
+var n = norm(a);
+console.log(n); //->9.3808315 ...
+```
+
+**외부함수의 변수 유효 범위가 그 함수의 중첩함수에까지 영향을 미친다**
+
+중첩함수는 자신을 둘러싼 외부함수의 인수와 지역변수에 접근할 수 있음!!
+
+---
+
+* #### 즉시 실행 함수 
+
+1. **(function(){...})();**
+
+2. **(function(){}());**
+
+
+-익명함수를 정의하는 동시에 실행할 수 있음 
+
+-즉시 실행 함수도 이름을 붙이는 것이 가능하지만 이름이 함수 내부에서만 유효(프로그램에 대한 이해도를 높이기 위해 작성)
+
+-즉시실행함수도 변수에 할당이 가능 
+
+```
+(function fact(n){
+    if(n<=1) return 1;
+    return n*fact(n-1);
+})(5);
 ```
