--- a/_posts/2021-07-19-function.md
+++ b/_posts/2021-07-19-function.md
@@ -109,7 +109,8 @@ function square(x) {return x*x};
 
 지역 유효 범위: 지역변수가 선선된 함수 내부가 유효 범위인 경우
 
-<전역변수와 지역변수의 차이>
+
+**전역변수와 지역변수의 차이**
 
 3. 함수 안에서의 변수 선언 끌어올림
 
