--- a/_posts/2021-07-21-event.md
+++ b/_posts/2021-07-21-event.md
@@ -24,9 +24,9 @@ toc: true
         
 
 
-    <주요 이벤트 처리기 이름>
+    주요 이벤트 처리기 이름
 
-    ![image](https://user-images.githubusercontent.com/83913407/126605222-4c3d3759-2c3c-4b16-a196-58d320f09db9.png)
+![image](https://user-images.githubusercontent.com/83913407/126605222-4c3d3759-2c3c-4b16-a196-58d320f09db9.png)
 
 
 ### 이벤트 처리기 등록 방법 
