--- a/_posts/2021-07-19-function.md
+++ b/_posts/2021-07-19-function.md
@@ -8,7 +8,7 @@ tag:
 toc: true
 ---
 
-### FUNCTION 
+### FUNCTION(1)-함수의 성질 및 중첩함수/즉시실행함수/Arguments객체 
 
 ---
 
@@ -189,7 +189,7 @@ var parameters = {
 circulation(parameters);
 ```
 
-* #### 중첩함수 Nested Function
+### 중첩함수 Nested Function
 
 -함수 내부에 선언된 함수 
 
@@ -223,7 +223,7 @@ console.log(n); //->9.3808315 ...
 
 ---
 
-* #### 즉시 실행 함수 
+### 즉시 실행 함수 
 
 1. **(function(){...})();**
 
@@ -242,3 +242,61 @@ console.log(n); //->9.3808315 ...
     return n*fact(n-1);
 })(5);
 ```
+
+---
+
+### 인수
+
+
+* #### 인수의 생략
+
+생략된 인수는 undefined로 전달됨
+
+```
+function f(x,y){
+     console.log(`x는 ${x}이고, y는 ${y}입니다.`);
+}
+f(2); // -> x= 2, y= undefined
+```
+
+인수를 생략하더라도 초기값을 설정하면 undefined값 대신 초기값으로 값이 설정됨
+
+```
+function f(x,y){
+    b = b || 1; 
+    return a*b
+}
+f(2) //-> 2 (b의 초기값이 1로 설정되었기 때문에 a=2와 b=1을 곱하면 2)
+```
+
+**||는 왼쪽 피연산자가 true로 평가되면 왼쪽 피연산자를 반환하고, 왼쪽 피연산자가 false로 평가되면 오른쪽 피연산자가 반환됨.
+(undefined는 false평가됨)**
+
+
+* #### 가변 길이 인수 목록(arguments객체)
+
+arguments[i]를 통해 해당인자의 값 바꾸기
+
+```
+function f(x,y){
+    arguments[1]=3;
+    console.log("x =" + x + "y =" + y);
+}
+f(1,2) //-> x=1, y=3
+```
+
+
+인수의 개수가 완전히 고정된 것이 아닌 가변 인수 함수를 정의
+
+```
+function myConcat(seperator){
+    var s = "";
+    for(var i=1; i<arguments.length;i++){
+        s+=arguments[i];
+        if(i<arguments.length-1) s+=seperator;
+    }
+    return s;
+}
+console.log(myConcat("/","apple","orange","peach"));
+```
+
