add recursive call example

--- a/_posts/2021-07-27-function(2).md
+++ b/_posts/2021-07-27-function(2).md
@@ -8,7 +8,7 @@ tag:
 toc: true
 ---
 
-### FUNCTION(2)
+### FUNCTION(2)-재귀함수 
 
 ---
 
@@ -29,7 +29,7 @@ var fact = function f(n){
 //함수 이름 f는 함수 안에서만 유효//
 ```
 
-2. arguments.callee 사용하기 
+2. **arguments.callee** 사용하기 
 ```
 var fact = function(n){
     if(n<=1) return 1;
@@ -60,3 +60,83 @@ var fact = function(n){
 재귀 함수는 재귀호출이 멈출 때까지 몇 번이고 호출하기 때문에, 그만큼 메모리 소비량이 많아 비효율적임.
 
 **반복문을 작성할 때는 되도록 while이나 for문으로 작성하는 것이 더 효율적임**
+
+### 재귀함수 예
+
+* #### 하노이의 탑
+
+프랑스 수학자 에두아르 뤼카(Edouard Lucas)가 쓴 유희수학(1984)에 실린 게임
+
+
+-규칙-
+
+1. 원반은 한 번에 한 개만 옮길 수 있다.
+
+2. 원반은 막대기 이외의 장소에는 옮길 수 없다.
+
+3. 원반을 옮길 때는 작은 원반 위에 그보다 큰 원반을 쌓을 수 없다.
+
+
+n=3일때 A막대기의 원반들을 C막대기의 원반으로 옮기는 방법
+
+1. 막대기 A의 가장 아래에 깔린 원반(n)을 제외하고 나머지 n-1일 C를 거쳐 B로 이동
+
+2. 막대기 A의 가장 아래에 깔린 원반을 막대기 C로 옮김
+
+3. 막대기 B에 있는 나머지 n-1원반을 막대기 A를 거쳐 막대기 C로 옮김
+
+```
+function hanoi(n,a,b,c){
+    if(n<1) {return;}
+    hanoi(n-1,a,c,b);
+    console.log(n+"번째 원반:"+a+"->"+c);
+    hanoi(n-1,b,a,c);
+}
+hanoi(4,"A","B","C");
+```
+결과
+
+![image](https://user-images.githubusercontent.com/83913407/127504402-d74bd6df-cf6c-45f8-ad90-412851f2e2b3.png)
+
+
+
+* #### 퀵 정렬
+
+-1962년 찰스 앤터니 리처드 호어가 발표
+
+-배열을 오름차순 a[1],...,a[n-1]으로 정렬
+
+-평균 실행 시간이 O(nlogn)으로 가장 빠른 정렬 알고리즘 중 하나
+
+
+-정의-
+
+1. 적당한 값 p를 고른다. p를 고를 때는 가능한 그 값의 크기가 p값 이상인 요소와 개수와 p 값 이하인 요소의 개수가 같도록 한다.
+
+2. 배열 앞부분에는 p값 이상인 요소를 옮기고, 배열 뒷부분에는 p값 이하인 요소를 옮긴다.
+
+3. 배열 앞부분의 길이가 2이상이면 그 부분을 대상으로 퀵 정렬을 한다.
+
+4. 배열 뒷부분의 길이가 2이상이면 그 구분을 대상으로 퀵 정렬을 한다.
+
+
+**퀵 배열은 배열을 두개로 나눈 후에 나눈 부분(배열 앞부분, 배열 뒷부분)을 대상으로 퀵 정렬을 재귀적으로 반복**
+
+```
+function quicksort(x, first, last){
+    var p = x[ Math.floor((first+last)/2)];
+    for(var i=first, j=last; ;i++,j--){
+    while(x[i]<p) i++;
+    while(p<x[j]) j--;
+    if(i>=j) break;
+    var w = x[i];
+    x[i]=x[j];
+    x[j]=w;
+}
+if(first<i-1) quicksort(x,first,i-1);
+if(j+1<last) quicksort(x,j+1,last);
+}
+var a = [7,2,5,1,8,9,3];
+quicksort(a,0,a.length-1);
+console.log(a);
+```
