--- a/_posts/2021-07-27-function(2).md
+++ b/_posts/2021-07-27-function(2).md
@@ -134,9 +134,29 @@ function quicksort(x, first, last){
     x[j]=w;
 }
 if(first<i-1) quicksort(x,first,i-1);
-if(j+1<last) quicksort(x,j+1,last);
+if(j+1<last) quicksort(x,j+1,last); 
 }
 var a = [7,2,5,1,8,9,3];
 quicksort(a,0,a.length-1);
 console.log(a);
 ```
+
+### 클로저 Closure
+
+**자기 자신이 정의된 환경에서 함수 안에 있는 자유 변수의 식별자 결정을 실행**
+
+-> 이 동작을 하는 함수와 그 기능을 구현한 자료의 모음 = 클로저 
+
+
+![image](https://user-images.githubusercontent.com/83913407/127743494-ece19584-0c0e-4b68-9bcc-c7b35a3304c6.png)
+
+
+1. 함수 f를 호출할 때 함수 f의 렉시컬 환경 컴포넌트가 생성
+
+2. 함수 g의 함수 선언문을 평가해서 함수 객체를 생성
+
+3. 함수 g를 호출하면, 함수 g의 렉시컬 환경 컴포넌트가 생성(g의 렉시컬 환경 컴포넌트에 함수 g의 코드, 함수 f의 렉시컬 컴포넌트 참조,전역객체의 참조가 저장)
+
+
+_참고_ 자바스크립트는 **스킴(Scheme)**이라는 언어에서 큰 영향을 받았는데, 클로저 또한 이 스킴에서 받아들인 기능 
+
