--- a/_posts/2021-07-27-function(2).md
+++ b/_posts/2021-07-27-function(2).md
@@ -160,3 +160,166 @@ console.log(a);
 
 _참고_ 자바스크립트는 **스킴(Scheme)**이라는 언어에서 큰 영향을 받았는데, 클로저 또한 이 스킴에서 받아들인 기능 
 
+
+* #### 클로저의 성질
+
+
+**클로저 = 캡슐화된 객체**
+(캡슐화: 객체의 프로퍼티를 외부로부터 은폐하는 행위 in 객체 지향 프로그래밍)
+
+1. 전역변수 counter가 **간접적**으로 지역변수 count를 참조
+```
+function makeCounter(){
+    var count = 0;
+    return f;
+    function f(){
+        return count ++;
+    }
+}
+var counter= makeCounter();
+console.log(counter()); //->0
+console.log(counter()); //->1   
+console.log(counter()); //->2
+```
+
+-> 이 경우에는 작업이 끝난 후에도 makeCounter의 렉시컬 환경 컴포넌트가 지워지지 않음
+
+2. makeCounter()를 호출할때마다 그것의 렉시컬 환경 컴포넌트가 새로 생성되어 **별도의 카운터가 생성**
+
+```
+function makeCounter(){
+    var count =0;
+    return f;
+    function f(){
+        return count ++;
+    }
+}
+var counter1 = makeCounter();
+var counter2 = makeCounter();
+console.log(counter1()); //->0
+console.log(counter2()); //->0
+console.log(counter1()); //->1
+console.log(counter2()); //->1
+```
+
+3. 보통은 위의 경우보다는 아래처럼 익명의 함수를 반환하는 방법을 주로 사용 
+
+``` 
+function makeCounter(){
+    var count = 0;
+    retrun function(){
+        retrun count++
+    }
+}
+var counter = makeCounter();
+console.log(counter());
+console.log(counter());
+console.log(counter());
+```
+
+---
+
+* #### 클로저의 핵심사항 
+
+1. 외부함수를 호출하면 그 함수의 렉시컬 환경 컴포넌트가 생성된다. 그리고 그 안에 중첩된 중첩함수의 함수 객체를 생성해서 반환한다.
+그 결과 외부 함수의 렉시컬 환경 컴포넌트를 참조하는 중첩함수가 정의한 클로저가 생성
+**->외부함수는 클로저를 생성하는 factory(공장)함수라고도 할 수 있음**
+
+
+2. 외부함수가 속한 렉시컬 환경 컴포넌트는 클로저 내부 상태 지체이며,외부 함수가 호출될 때마다 새로 생성(위의 예제 2번 참조)
+
+
+3. 중첩 함수의 함수 객체가 있는 한 외부 함수가 속한 렉시컬 환경 컴포넌트는 지워지지 않음(외부함수를 삭제하더라도 컴포넌트는 지워지지 않음)
+
+
+4. 클로저 내부 상태(외부 함수의 지역변수, 선언적 환경 레코드)는 외부로부터 은폐되어 있으며, 중첩함수 안에서만 읽거나 쓸 수 있음.
+
+---
+
+* #### 예시
+
+1. 여러 개의 내부 상태와 메서드를 가진 클로저
+
+```javascript
+function Person(name,age){
+    var _name = name;
+    var _age = age;
+    return{
+        getName: function(){return _name;},
+        getAge: function(){return _age;},
+        setAge: function(x){_age=x;}
+    };
+}
+var person = Person("Tom",18);
+console.log(person.getName()); 
+console.log(person.getAge());
+person.setAge(19);
+console.log(person.getAge());
+```
+
+
+2. 함수 팩토리
+
+```javascript
+function makeMultiplier(x){
+    return function(y){
+        return x*y;
+    };
+}
+var multi2 = makeMultiplier(2); /*multi2와 multi10은 서로 다른 렉시컬 환경 컴포넌트를 가지고 있음 */
+var multi10 = makeMultiplier(10);
+console.log(multi2(3)); //->6
+console.log(multi10(3)); //->30
+```
+
+3. 반복문 안에서 클로저 만들기 - **잘못된 예시**
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        window.onload = function(){
+            var elm = document.getElementsByTagName('input');
+            for(var i=0;i<elm.length;i++){
+                elm[i].onclick = function(){
+                    console.log(i);
+                };
+            }
+        };
+    </script>
+</head>
+<body>
+    <input type="button" value="0">
+    <input type="button" value="1">
+    <input type="button" value="2">
+</body>
+</html>
+```
+->이미 onclick 이멘트가 실행된 시점에서 for문의 실행이 끝나 변수가 i인 상태여서 0을 클릭하던,1을 클릭하던 console에 3이 출력됨
+
+**위를 정상적으로 작동하도록 고친 예시**
+
+1. 즉시실행함수 사용
+
+```javascript
+for(var i=0;elm.length;i++)(function(_i){
+    elm[_i].onclick = function(){
+        console.log(_i);
+    };
+}(i);
+```
+
+
+2. let 사용
+```javascript
+for(let i=0;elm.length;i++){
+    elm[i].onclick = function(){
+        console.log(i); /*let은 var과는 다르게 재할당,재선언이 안되기 때문에 i마다 새롭게 선언해서 값이 대입됨*/
+    };
+}
+```
