--- a/_posts/2021-08-02-function(3).md
+++ b/_posts/2021-08-02-function(3).md
@@ -209,3 +209,133 @@ f.g = function(){...};
 
 
 **추가된 프로퍼티는 그 함수를 실행시키지 않더라도 읽거나 쓸 수 있음**
+
+---
+
+### 고차함수
+
+함수를 인수로 받는 함수 또는 함수를 반환하는 함수 
+
+* #### 예시
+
+1. 고차함수가 아닐 때
+
+```javascript
+digits = "";
+for(var i=0;i<10;i++){
+    digits += i;
+}
+console.log(digits) //-> 0123456789
+```
+
+```javascript
+randomChars="";
+for(var i=0;i<8;i++){
+    randomChars += String.fromCharCode(Math.floor(Math.random()*26)+"a".charCodeAt(0));
+}
+console.log(radomChars); //->rvwvfalc
+```
+
+2. 고차함수 일 때
+
+```javascript
+function joinStrings(n,f){
+    var s ="";
+    for(var i=0;i<n;i++){
+        s += f(i);
+    }
+    return s;
+}
+
+var digits = joinStrings(10,function(i){return i;});
+var randomChars = joinStrings(8,function(i){return String.fromCharCode(Math.floor(Math.random()*26)+"a".charCodeAt(0))});
+console.log(digits);
+console.log(randomChars);
+```
+
+* #### 메모이제이션_memoization
+
+인수를 함수로 받고, 그 함수를 메모이제이션 기법을 적용한 함수로 반환
+
+```javascript
+function memorize(f){
+    var cache = {};
+    return function(x){
+        if(cache[x]==undefined) cache[x]=f(x);
+        return cache[x];
+    };
+}
+function isPrime(n){
+    if(n<2) return false;
+    var m = Math.sqrt(n);
+    for(var i=2; i<=m; i++)if(n%i==0) return false;
+    return true;
+}
+var isPrime_memo = memorize(isPrime);
+var N=1000;
+for(var i=2;i<=N;i++) isPrime_memo(i);
+for(var i=2;i+2<=N;i++){
+    if(isPrime_memo(i) && isPrime_memo(i+2)) console.log(i+","+(i+2));
+}
+```
+
+-> **이 경우에는 메모이제이션을 적용하면 처리 속도가 느려짐** 프로퍼티 이름을 문자열(cache)로 설정하면 프로퍼티를 읽고 쓰는 속도가 느려지기 때문에 함수를 많이 호출하면 병목현상이 발생하게 됨
+
+
+* #### 함수의 합성
+
+f(x)와 g(x)가 있을 때, f(g(x))를 f와 g의 **합성함수**라고 함
+
+1. 인수가 한개인 합성함수
+
+```javascript
+function compose(f, g){
+    return function(x){
+        return f(g(x));
+    };
+}
+var square = function(X){return x*x;};
+var add1 = function(X){return x+1;};
+var h = compose(square,add1); //-> h(x)=(x+1)*(x+1)
+console.log(h(2)); //->9
+```
+
+2. 인수가 여러개인 합성함수
+
+```javascript
+function compose(f,g){
+    return function(){
+        return f.call(this,g.apply(this.arguments));
+    };
+}
+```
+
+* #### 부분적용
+
+인수를 여러 개 받는 함수의 몇몇 인수를 상수로 지정해 새로운 함수를 생성하는 기법
+
+```javascript
+function partial(f){
+    var args = arguments;
+    return function(){
+        var a =Array.prototype.slice.call(args,1)
+        for(var i=0,j=0;i<a.length;i++){
+            if(a[i]==undefiend) a[i]=arguments[j++];
+        }
+        return f.apply(this,a);
+    };
+}
+```
+
+* #### 커링
+
+인수를 두 개 이상 받는 함수를 분해하여 인수가 하나인 함수의 중첩함수로 변환 
+
+```javascript
+var pow= function(exponent){
+    return function(base){
+        return Math.pow(base,exponent); // pow(exponent)(base)
+    };
+};
+var a = pow(2);
+console.log(a(3)); //-> 9
