--- a/_posts/2021-07-18-object.md
+++ b/_posts/2021-07-18-object.md
@@ -1,5 +1,5 @@
 ---
-title: "객체 Object"
+title: "객체 Object(1)"
 category:
     - Javascript
 tag:
@@ -8,7 +8,7 @@ tag:
 toc: true
 ---
 
-# 객체
+#### OBJECT - 정의/객체생성방법/객체리터럴/프로퍼티/생성자/내장객체/프로토타입
 
 * #### 정의
 
@@ -20,6 +20,43 @@ toc: true
     
 
 ![KakaoTalk_20210718_231718849](https://user-images.githubusercontent.com/83913407/126070817-5fcdb734-b6f0-4e5d-8190-80e1b3f5aa26.jpg)
+
+* #### 객체의 생성방법
+
+1. 객체 리터럴로 생성하는 방법
+
+```javascript
+var card = { suit: "하트", rank: "A"};
+```
+
+2. 생성자로 생성하는 방법
+
+```javascript
+function Card(suit,rank){
+    this.suit = suit;
+    this.rank = rank;
+}
+var card = new Card("하트","A");
+```
+
+3. Object.create로 생성하는 방법(ECMAScript 5부터 추가)
+
+```javascript
+var card = Object.create(Object.prototype{
+    suit:{
+        value: "하트",
+        writeable: true,
+        enumerable: true,
+        configurable: true
+    },
+    rank: {
+        value: "A"
+        writeable: true,
+        enumerable: true,
+        configurable: true
+    };
+});
+```
 
 ---
 
@@ -159,3 +196,50 @@ Date생성자가 제공하는 주요 메서드
     - now.toLocaleDateString()
 
     - now.toLocaleTimeString() 
+
+---
+
+### 프로토타입
+
+* ### 생성자안에서 메시드 생성주의
+
+```javascript
+function Circle(center,radius){
+    this.center= center,
+    this.radius= radius,
+    this.area= function(){
+        return Math.PI*this.radius*this.radius;
+    };
+}
+var c1 = new Circle({x:0,y:0},2.0);
+var c2 = new Circle({x:0,y:1},3.0);
+var c3 = new Circle({x:1,y:0},2.0);
+```
+
+생성자안에서 this뒤에 메서드를 정의하면 그 생성자로 생성한 모든 인스턴트에 메서드가 똑같이 추가됨. 즉, 같은 작업을 하는 메서드를 인스턴스 개수만큼 생성하게 되어 그만큼의 메모리 소비가 발생
+
+-> **prototype프로퍼티 이용하면 다음과 같은 문제 해결가능**
+
+* #### 프로토타입 객체
+
+```javascript
+
+function Circle(center,radius){
+    this.center= center,
+    this.radius= radius,
+}
+Circle.prototype.area = function(){
+        return Math.PI*this.radius*this.radius;
+};
+
+var c1 = new Circle({x:0,y:0},2.0);
+var c2 = new Circle({x:0,y:1},3.0);
+var c3 = new Circle({x:1,y:0},2.0);  
+console.log("넓이=" + c1.area());
+```
+
+-함수도 객체이므로 prototype프로퍼티를 가지고 있음
+
+-똑같은 작업을 하는 메서드를 **프로토타입 객체**로 생성하여, 인스터스가 이 프로토타입 객체를 참조하게 함(**인스턴스가 프로토타입 객체를 상속하고 있다**)
+
+-**메모리 낭비를 피할 수 있음**
