add property operator

--- a/_posts/2021-08-06-object(2).md
+++ b/_posts/2021-08-06-object(2).md
@@ -39,12 +39,12 @@ toc: true
 * #### 프로토타입 체인
 
 
-**내부 프로퍼티 [[Prototype]]**
+**내부 프로퍼티 \[[Prototype]]**
 
--모든 객체는 내부 프로퍼티 [[Prototpye]]을 가짐(함수 객체의 prototype과는 다름)
+-모든 객체는 내부 프로퍼티 \[[Prototpye]]을 가짐(함수 객체의 prototype과는 다름)
 
 
--ECMAScript 5부터는 사용자가 내부 프로퍼티 [[Prototype]]을 읽고 쓸 수 없었지만, ECMAScript 6부터는 __proto__프로퍼티에 내부 프로퍼티가 저장
+-ECMAScript 5부터는 사용자가 내부 프로퍼티 \[[Prototype]]을 읽고 쓸 수 없었지만, ECMAScript 6부터는 __proto__프로퍼티에 내부 프로퍼티가 저장
 
 
 -ECMAScript 6부터 추가된 기능이기 때문에 모든 자바스크립트 실행 환경이 이 기능을 지원하는 것이 아님을 유의
@@ -169,7 +169,7 @@ var newObj = {};
 
 2. Char.prototype을 생성된 객체(char)의 프로토타입으로 설정
 
-var newObj.__proto__ = Char.prototype;
+var newObj.\__proto__ = Char.prototype;
 
 
 3. Char생성자를 실행하고 newObj을 초기화. 이때 this는 생성된 객체로 설정되고, 인수는 new연산자와 함께 사용한 인수를 그대로 사용
@@ -189,7 +189,7 @@ retrun newObj;
 
 1. constructor프로퍼티
 
-2. [[prototpye]](__proto__)
+2. \[[prototpye]](\__proto__)
 
 
 * #### constructor프로퍼티
@@ -210,5 +210,104 @@ console.log(f.prototype.constructor); //-> function f(){}
 
 ![image](https://user-images.githubusercontent.com/83913407/128604329-edd146b3-2f42-42f3-9d40-e9ddca71a771.png)
 
+
+* #### 내부 프로퍼티
+
+함수 객체가 가진 프로토타입 객체의 내부 프로퍼티 \[[protorype]]은 기본적으로 Object.prototype을 지칭
+
+```javascript
+function f(){};
+console.log(f.prototype.__proto__); //-> Object.prototype 
+```
+
+-new연산자를 이용하여 생성자로 생성한 인스턴스가 Object.prototype의 프로퍼티를 사용할 수 있는 이유임
+
+
+* ### 프로토타입의 교체 
+
+**생성자의 prototype프로퍼티를 교체할 때 주의해야함**
+
+1. 새로운 객체를 prototype프로퍼티 값으로 대입하면 새로운 객체의 constructor프로퍼티가 없기 때문에 프로토타입 객체와 생성자간의 연결이 끊겨버림 
+
+2. 새로운 객체의 constructor을 정의해주고, 그 프로퍼티에 생성자의 참조를 대입해야함 
+
+```javascript
+function Circle(center,radius){
+    this.center = center;
+    this.radius = radius;
+}
+Circle.prototype={
+    constructor: Circle;   //생성자를 constructor로 대입
+    area: function(){return Math.PI*this.radius*this.radius};
+};
+var c = new Circle({x:0,y:0},2.0);
+console.log(c.construcor); //-> Function Circle
+console.log(c instanceof Circle) //-> true (c가 생성자 Circle로 생성된 것인지를 확인)
+```
+
+
+* #### 인스턴스 생성 후 프로토타입 교체
+
+```javascript
+function Circle(center,radius){
+    this.center = center;
+    this.radius = radius;
+}
+var c = new Circle({x:0,y:0},2.0);
+Circle.prototype={
+    constructor: Circle;   //생성자를 constructor로 대입
+    area: function(){return Math.PI*this.radius*this.radius};
+};
+c.area(); //-> Uncaught TypeError: c.area is not a function 
+```
+
+인스타를 생성 한 후에는 prototype프로퍼티 값을 교체해도 변하지 않음
+
+생성된 후에는 생정자의 프로토타입을 바꿔도 객체가 그 바뀐 프로퍼티를 상속받지 않음 
+
+
+![image](https://user-images.githubusercontent.com/83913407/128634748-3542da81-653d-48a5-b659-5a95c5d977b8.png)
+
+**기존의 프로토타입 객체에 프로퍼티를 추가한 경우에는 정상적으로 작동(생성자와 인스턴스 사이의 연결고리가 끊기지 않기때문에)**
+
+
+### 프로토타입 확인
+
+* #### instanceof연산자
+
+지정한 객체의 프로포타입 체인에 지정한 생정자의 프로토타입 객체가 포함되는지를 판정
+
+**객체 instanceof 생성자**
+
+
+example)
+
+```javascript
+function f(){};
+var obj = new f();
+console.log(obj instanceof f); //-> true 
+console.log(obj instanceof Object); //->true
+console.log(obj instanceof Date); //->false
+```
+
+**인스턴스가 해당 생성자로 생성되었는지를 확인하는 것이 아닌 인스턴스가 생성자의 프로토타입 객체를 상속받았는지를 확인**
+
+
+* #### isPrototypeOf 메서드
+
+특정 객체가 다른 객체의 프로토타입 체인에 포함되어 있는지를 확인
+
+**프로토타입 객체.isPrototypeOf(객체)**
+
+
+example)
+
+```javascript
+function f(){};
+var obj = new f();
+console.log(f.prototype.isPrototypeOf(obj)); //->true
+console.log(Object.prototype.isPrototypeOf(obj))//->true
+console.log(Date.prototype.isPrototypeOf(obj))//->false
+```
 
 
