add Prototype method

--- a/_posts/2021-08-06-object(2).md
+++ b/_posts/2021-08-06-object(2).md
@@ -1,5 +1,5 @@
 ---
-title: "객체 Object(2)"
+title: "프로토타입"
 category:
     - Javascript
 tag:
@@ -8,7 +8,7 @@ tag:
 toc: true
 ---
 
-### OBJECT(2)-프로토타입 상속/new/프로토타입 객체의 프로퍼티
+### PROTOTYPE-프로토타입 상속/new/프로토타입 객체의 프로퍼티/프로토타입 확인
 
 ---
 
@@ -311,3 +311,66 @@ console.log(Date.prototype.isPrototypeOf(obj))//->false
 ```
 
 
+* #### Object.prototype 
+
+
+1. Object 생성자
+
+-Object생성자는 내장 생성자로 일반적인 객체를 생성
+
+
+-인수없이 실행할 경우에는 빈 객체를 생성
+
+ex) var obj = new Object(); 는 var obj={};와 동일함
+
+
+-Object생성자를 new없이 호출해도 new를 붙여서 호출했을 때와 동일하게 동작
+
+
+-객체를 조절하기 위한 메서드와 프로퍼티를 제공
+
+
+**Object생성자의 메서드**
+
+![image](https://user-images.githubusercontent.com/83913407/128724436-af777f80-3a6f-4c36-9faa-5633c736c28a.png)
+![image](https://user-images.githubusercontent.com/83913407/128724556-1a0dd7c2-e82f-456d-8816-bbaa57a4b597.png)
+    
+
+**Object.prototype의 메서드**
+
+![image](https://user-images.githubusercontent.com/83913407/128724720-789788aa-5249-4d96-8ba9-2ccbe418fb08.png)
+
+
+**원리)**
+
+![image](https://user-images.githubusercontent.com/83913407/128727157-7834676d-9881-4204-a3ac-2f87747cbd5d.png)
+
+
+**Object.create로 객체 생성**
+
+```javascript
+var person1 = {
+        name: "tom",
+        sayhello: function(){console.log("hello" + this.name);}
+};
+var person2 = Object.create(person1);
+person2.name="huck";
+person2.sayhello(); //->hello huck
+```
+
+<u>인수에 null을 넘기면 프로토타입이 없는 객체를 생성</u>
+
+
+ex) var blankObject = Object.create(null);
+
+-이를 활용하면 순수한 프로퍼티 집합(해시 테이블)을 만들수 있지만, 이런 경우에는 Object.prototype을 상속받지 않았기 때문에 Object.prototype메서드(ex.toString(),valeOf() 등)을 이용할 수 없음 
+
+
+-객체 리터럴은 빈 객체를 만들어도 Object.prototype메서드를 이용할 수 있음
+
+
+-Object.create로 만든 빈 객체도 Object.prototype메서드를 이용하기 위해서는 **인수로 Object.prototype을 넘겨줌**
+
+var obj = Object.create(Object.prototype);
+
+![image](https://user-images.githubusercontent.com/83913407/128726681-a1d9894a-c656-4284-bdba-a9b012b5ec85.png)
