--- a/_posts/2021-08-02-function(3).md
+++ b/_posts/2021-08-02-function(3).md
@@ -1,5 +1,5 @@
 ---
-title: "Function(1)"
+title: "Function(3)"
 category:
     - Javascript
 tag:
@@ -8,7 +8,7 @@ tag:
 toc: true
 ---
 
-### FUNCTION(3)_
+### FUNCTION(3)-이름공간(객체,함수)/모듈패턴/함수의 프로퍼티와 메서드/고차함수 
 
 ---
 
@@ -55,12 +55,10 @@ toc: true
 
 2. 그 객체에 프로그램 전체에서 사용하는 모든 변수와 함수를 프로퍼티로 설정
 
-```Javascript
+```javascript
 var myApp = myApp || {};
 /* myApp이 정의되어있을 때는 그것을 활용하고 그렇지 않으면 빈 객체를 myApp에 할당*/
 ```
-
-
 
 -이런식으로 myApp만이 사용자가 정의한 전역변수가 되므로, 전역 유효 범위의 오염을 최소화 할 수 있음
 
@@ -159,6 +157,7 @@ Module.showName(); //->"Tom"
 * #### 함수의 매서드
 
 **Function.prototype 프로퍼티**
+
 |프로퍼티 이름|설명|
 |------------|----|
 |apply()|선택한 this와 인수를 사용하여 함수를 호출. 인수는 배열 객체|
@@ -339,3 +338,4 @@ var pow= function(exponent){
 };
 var a = pow(2);
 console.log(a(3)); //-> 9
+```
