--- a/_posts/2021-08-04-function(4).md
+++ b/_posts/2021-08-04-function(4).md
@@ -8,7 +8,7 @@ tag:
 toc: true
 ---
 
-### FUNCTION(4)-콜백함수/ECMAScript6
+### FUNCTION(4)-콜백함수/ECMAScript6(+제너레이터)
 
 ---
 
@@ -233,11 +233,14 @@ for(var v of a) console.log(v);
 
 ### 제너레이터
 
-**성질**
+* #### 성질
 
 1. 반복 가능한 이터레이터를 값으로 반환
 
 2. 작업의 일시정지와 재시작이 가능하며 자신의 상태를 관리 
+
+
+**이터레이터와 제너레이터의 차이**) 이터레이터와 제너레이터는 둘 다 반복처리를 지원하지만, <u>이터레이터</u>는 각 처리 단계를 제어하는 것이 불가능하여 쭉 진행되지만 <u>제너레이터</u>는 각 단계에서 일시정지와 재시작 등의 제어가 가능함 
 
 
 -**function*문으로 정의한 함수**
@@ -251,12 +254,159 @@ function* gen(){
     yield 3;
 }
 var iter = gen();
-console.log(iter.next());
-console.log(iter.next());
-console.log(iter.next());
-console.log(iter.next());
+console.log(iter.next()); //->Object{value:1, done:flase}
+console.log(iter.next()); //->Object{value:2, done:flase}
+console.log(iter.next()); //->Object{value:3, done:flase}
+console.log(iter.next()); //->Object{value:undefined, done:true}
 ```
 
 **yield: 프로그램이 일시적으로 정지하는 위치**
+**next: 제너레이터 함수의 상태를 일시정지 상태에서 실행 상태로 바꾸는 역할**
 
+
+1. 제너레이터 함수인 gen은 호출해도 바로 실행되지 않고, 이터레이터가 반환되어 변수 iter에 대입
+
+
+2. 이터레이트의 next가 호출되면 함수의 첫 번째 yield연산자의 위치까지 실행된 뒤 결과값으로 이터레이터 리절트를 반환.
+**(이터레이터 리절트의 value프로퍼티 값으로 yield표현식에 저장된 값이 저장되고, done프로퍼티 값으로 제너레이터 함수를 끝까지 실행했는지를 저장)**
+
+
+3. 또 다시 이터레이터의 next가 실행되면 일시 정지한 위치에 있는 처리를 재개하여 다음 번 yield가 실행
+
+
+4. 마지막 yield에 도착한 후 더 이상의 값이 없으면 value프로퍼티 값이 undefined값이고, done프로퍼티 값이 true인 이터레이트 리절트가 반환 
+
+
+![image](https://user-images.githubusercontent.com/83913407/129333426-0b428273-3690-47a9-a6b0-16d06bf82a40.png)
+
+**이터레이터 객체는 처리를 재개할 수 있또록 제너레이터 함수의 내부 상태를 모두 저장**
+
+
+* #### 예시(+무작위 행보) 
+
+1. m부터 n까지의 정수 값을 순서대로 꺼내는 이터레이터를 생성하는 제너레이터
+
+```javascript
+function* createNumbers(from,to){
+    while(from<=to) yield from++; 
+}
+var iter = createNumbers(10,20);
+for(var v of iter) console.log(v); //-> 10~20까지의 숫자가 표시됨
+```
+
+
+2. 2차원 배열 위의 무작위행보 
+
+![image](https://user-images.githubusercontent.com/83913407/129336520-2983bbe2-37a6-4c81-a259-4b37c3d48064.png)
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>2차원 배열 위의 무작위 행보</title>
+    <script>
+        function* randomWalk(c,x0,y0,d){
+            var dx = [1,0,-1,0], dy = [0,1,0,-1];
+            var x = x0;
+            var y = y0;
+            c.strokeStyle="red";
+            c.globalAlpha=0.25;
+            while(true){
+                yield;
+                c.beginPath();
+                c.moveTo(x,y);
+                var dir = Math.floor(Math.random()*4);
+                x += d*dx[dir];
+                y += d*dy[dir];
+                c.lineTo(x,y);
+                c.stroke();
+            }
+        }
+        window.onload = function(){
+            var canvas = document.getElementById('mycanvas');
+            var ctx = canvas.getContext('2d');
+            var iter = randomWalk(ctx,300,300,4);
+            setInterval(function(){iter.next();},10);
+        };
+    </script>
+    <style>
+        #mycanvas { 
+            border:1px solid gray;
+        }
+    </style>
+</head>
+<body>
+    <canvas id="mycanvas" width=600 height=600></canvas>
+</body>
+</html>
+```
+
+* #### 제너레이터 종료
+
+
+**return메서드 이용**
+
+```javascript
+function* g(){
+    yield 1;
+    yield 2;
+    yield 3;
+}
+var iter = g();
+iter.next(); //->Object{value:1, done:false}
+iter.return(10); //->Object{value:10, done:true}
+iter.next(); //->Object{value:undefined, done:true}
+```
+
+
+* #### 제너레이터 예외 던지기 
+
+
+**throw메서드와 try/catch문 이용**
+
+```javascript
+function* idMaker(){
+    var count = 0;
+    while(true){
+        try{
+            yield count++;
+        }catch(e){
+            console.log("오류가 발생했습니다");
+        }
+    }
+}
+var iter = idMaker();
+console.log(iter.next()); //->Object{value:0, done:false}
+console.log(iter.next()); //->Object{value:1, done:flase};
+iter.throw(new Error("오류")); //->"오류가 발생했습니다"
+                               //->Object{value:2, done:false}
+```
+
+
+* #### 반복 가능한 객체에 위임
+
+
+**yield*표현식 이용**
+
+반복가능한 객체에서 순차적으로 값을 꺼내 각각의 값에 yield를 적용
+
+
+```javascript
+function* f(){
+    yield "x";
+    yield "y";
+}
+
+function* g(){
+    yield 0;
+    yield* [2,4];
+    yield* "ab";
+    yield* f();
+}
+var iter = g();
+for(var v of iter) console.log(v); //-> 0,2,4,a,b,x,y순서로 순차적으로 값이 도출
+```
 
