--- a/_posts/2021-08-14-object(3).md
+++ b/_posts/2021-08-14-object(3).md
@@ -8,7 +8,7 @@ tag:
 toc: true
 ---
 
-### OBJECT - 객체 잠그기 
+### OBJECT - 객체 잠그기/mixin/Object.defineProperty
 
 ---
 
@@ -123,12 +123,130 @@ Object.freeze(person);
 -**읽기만 가능한 상태**
 
 
-<u>**Object.isFrozen메서드</u>
+<u>**Object.isFrozen메서드**</u>
 
 인수로 받은 객체가 동결된 상태인지를 확인할 수 있음 
 
 ex) console.log(Object.isFrozen(person)); //-> true
 
 
+---
 
+### Mixin
+
+믹스인(Mixin): 특정 객체가 다른 객체가 가지고 있는 프로퍼티를 붗여 넣어 **뒤섞는**방법
+
+
+1. 상속기능을 이용하지 않고 특정 객체의 프로퍼티를 동적으로 다른 객체에 추가할 수 있음
+
+```javascript
+function mixin(target, source){
+    for(var property in source){
+        if(source.hasOwnProperty(property)){
+            target[property]==source[property];
+        }
+    }
+    return target;
+}
+
+var obj1={a:1, b:2};
+var obj2={b:3, c:4};
+var obj = mixin(obj1,obj2);
+console.log(obj) //->Object{a:1, b:3, c:4}
+```
+
+-target: 타깃 객체
+
+-source: 프로퍼티를 제공하는 원본 객체
+
+* #### 원리
+
+1. source객체가 소유하고 있으며 열거할 수 있는 모든 프로퍼티가 target객체에 복사됨 
+
+2. target객체에 있는 프로퍼티 값은 덮어쓰고, target객체에 없는 프로퍼티는 추가 (이때 덮어쓰기나 추가할 때 사용하는 방식은 **얇은 복사**)
+
+3. ECMAScript 6부터 추가된 **Object.assign**메서드를 사용하면 mixin과 같은 작업을 할 수 있음 
+
+---
+
+* ### 좀 더 완만한 mixin함수
+
+
+객체의 접근자 프로퍼티를 다른 객체에 mixin하려고 하면 **좀 더 완만한 mixin함수 = Object.defineProperty메서드**를 이용
+
+
+why? 원본 객체가 접근자 프로퍼티를 가지고 있을 때 접근자 프로퍼티도 데이터 프로퍼티로 바꾸어 복사하는 문제가 발생 
+
+example)
+
+```javascript
+function mixin(target, source){
+    for(var property in source){
+        if(source.hasOwnProperty(property)){
+            target[property]==source[property];
+        }
+    }
+    return target;
+}
+
+var person1 = {
+    _name: "Tom";
+    get name(){
+        return this._name;
+    }
+};
+var person2 = {};
+
+mixin(person2, person1);
+person2.name = "Huck";
+console.log(person2.name); //-> Huck
+console.log(person2); //-> Object{_name:"Tom", name = "Huck"}
+```
+
+-접근자 프로퍼티로 그대로 복사되는 경우에는 setter값이 설정되지 않았기 때문에 name프로퍼티에 새로운 값을 추가하면 오류가 떠야 함 
+
+
+-그러나, mixin함수가 새로운 프로퍼티를 대상 객체에 추가한 다음 원본 객체의 프로퍼티가 복사되던 시점에 가지고 있던 값을 할당해 버림으로써 _name와 name의 프로퍼티가 둘 다 생성 
+
+
+* #### Object.defineProperty
+
+```javascript
+function mixin(target, source){
+    var keys = Object.keys(source);
+    for(var i=0; i<keys.length; i++){
+        var descriptor = Object.getOwnPropertyDescriptor(source,keys[i]);
+        Object.defineProperty(target,keys[i],descriptor);
+    }
+    return target;
+}
+
+var person1 = {
+    _name: "Tom";
+    get name(){
+        return this._name;
+    }
+};
+var person2 = {};
+mixin(person2, person1);
+person2.name = "Huck";
+console.log(person2.name); //-> Tom
+console.log(person2); //-> Object{_name:"Tom"}
+```
+
+1. **Object.keys**
+
+원본 객체가 소유하면서 열거 가능한 모든 프로퍼티의 이름을 배열로 만듦
+
+
+2. **Object.getOwnPropertyDescriptor**
+
+각 프로퍼티의 프로퍼티 디스크립터를 구함
+
+
+3. **Object.defineProperty**
+
+타킷 객체에 새로운 프로퍼티를 추가 
+
+---
 
