--- a/_posts/2021-08-21-array(2).md
+++ b/_posts/2021-08-21-array(2).md
@@ -382,6 +382,10 @@ function permutation(a) {
 }
 var a = [1,2,3];
 permutation(a).forEach(function(v) {console.log(v);});
+```
+
+![image](https://user-images.githubusercontent.com/83913407/130343502-aa75ddc6-4f40-4e42-93cd-0267c25371ef.png)
+
 
 
 
