add about typedArray

--- a/_posts/2021-08-22-array(3).md
+++ b/_posts/2021-08-22-array(3).md
@@ -8,6 +8,7 @@ tag:
 toc: true
 ---
 
+
 ### ARRAY - 다차원배열/유사배열객체/ECMAScript6부터 추가된 기능(비구조화 할당, 전개연산자, 형식화 배열) 
 
 ### 다차원 배열
@@ -24,7 +25,7 @@ for(var i=0;i<3;i++){
 }
 
 for(var count=1,i=0;i<3;i++){
-    for(Var j=0;j<3;j++){
+    for(var j=0;j<3;j++){
         x[i][j] = count++;
     }
 }
@@ -376,3 +377,117 @@ var copy = buffer.slice(3,6);
 예시) Unit8ClampedArray메서드에 음수를 입력하면 0으로 간주하고, 255를 넘는 값을 입력하면 255로 간주 
 
 
+1. ArrayBuffer객체의 데이터 길이가 반드시 생성할 배열 요소의 데이터 길이의 **정수배**여야함 
+
+-> 배열의 길이가 정수가 아니면 오류(RangeError)가 발생
+
+
+2. 다른 형식화 배열을 인수로 넘기면 그 배열의 **복사본**이 만들어짐
+
+```javascript
+var a = new Int16Array(10);
+for(var i=0;i<10;i++) a[i] = i;
+var b = new Int16Array(a); //a를 인수로 전달하면 b에 a의 복사본이 할당됨
+console.log(a); //-> [0,1,2,3,4,5,6,7,8,9]
+console.log(a====b); //->false:a와 b는 별개의 배열
+```
+
+
+3. 일반배열(Array객체)를 인수로 넘기면 Array객체가 형식화배열에 복사됨
+
+```javascript
+var a = [1,2,3,4,5];
+var b = new Float64Array(a);
+console.log(b); //-> [1,2,3,4,5]
+```
+
+
+4. 형식화 배열은 일반적인 배열과 마찬가지로 반복 가능한(이터러블한) 이터레이터
+
+```javascript
+var a = new Uint8Array([0,1,-1]);
+for(var v of a) console.log(v); //-> 0,1,255
+```
+
+
+* #### 형식화 배열은 ArrayBuffer 객체의 뷰 
+
+향식화 배열의 요소는 ArrayBuffer객체의 영역 안에 저장됨
+
+->**형식화 배열의 요소를 읽고 쓰는 것이 바로 형식화 배열이 저장되 ArrayBuffer객체를 읽고 쓰는 것을 의미함**
+
+
+1. 형식화 배열이 저장된 ArrayBuffer 객체의 참조는 buffer프로퍼티를 통해 가져올 수 있음
+
+```javascript
+var a = new Int8Array(10);
+var buffer = a.buffer
+console.log(buffer.byteLength); //->10
+```
+
+
+2. 같은 ArrayBuffer객체로 형식화배열을 여러 개 생성하면, 그 형식화 배열은 같은 ArrayBuffer객체를 공유하게 됨
+
+```javascript
+var buffer = new ArrayBuffer(10);
+var a_uint8 = new Uint8Array(buffer);
+var a_uint16 = new Uint16Array(buffer);
+var a_uint32 = new Uint32Array(buffer);
+var a_float64 = new Float64Array(buffer);
+```
+
+![image](https://user-images.githubusercontent.com/83913407/130635828-c450ab6c-5121-46d4-bb8e-d4886bd254ed.png)
+
+
+**만약 a_uint8과 a_uint16이 함께 공유하고 있는 buffer을 수정한다면, 그 요소들도 수정됨**
+
+_예시_
+
+```javascript
+a_uint8[0] = 170; //->10101010(2)
+a_uint8[1] = 204; //->11001100(2)
+console.log(a_uint16[0]); //-> 52394 : = 110011010101010(2)
+```
+
+
+* #### 오프셋 지정
+
+오프셋을 지정하면 배열 길이를 지정할 수 있음
+
+```javascript
+var buffer = new ArrayBuffer(16);
+var a = new Int8Array(buffer,2,5);
+```
+
+-배열 a가 buffer의 2바이트 영역부터 시작해서 다섯 개 분량의 영역을 차지함
+
+-오프셋 배열 길이를 생략하면 배열이 모든 버퍼의 영역을 차지함
+
+![image](https://user-images.githubusercontent.com/83913407/130635990-752a7628-7f7a-489e-b089-05680889896f.png)
+
+
+**byteOffset**
+
+형식화 배열이 시작되는 위치인 오프셋을 구할 수 있게 해주는 프로퍼티
+
+
+console.log(a.byteOffset); //-> 2 
+
+
+**오프셋의 장점**
+
+
+하나의 ArrayBuffer객체에 여러개의 변수와 프로퍼티를 오프셋을 바꾸어 할당하면 ArrayBuffer하나로도 복잡한 자료 구조로 활용이 가능함
+
+```javascript
+var buffer = new ArrayBuffer(24);
+var person = {
+    id: new Uint32Array(buffer,0,1);
+    name: new Uint8Array(buffer,4,16);
+    weight: new Float32Array(buffer,20,1);
+};
+```
+
+![image](https://user-images.githubusercontent.com/83913407/130636154-6cc7dd75-2373-4580-a27e-b9070fdaabab.png)
+
+이렇게 작성하면 모든 person객체의 프로퍼티 값이 24비트 ArrayBuffer객체 안에 저장됨 
