--- a/_posts/2022-02-04-deadlock.md
+++ b/_posts/2022-02-04-deadlock.md
@@ -1,9 +1,9 @@
 ---
 title: "운영체제 - Deadlocks"
 categories:
-    - Operating System
+    - hello
 tags:
-    - Operating System
+    - hello
 date: 2022-02-24
 ---
 
