Add content of swapping

--- a/_posts/operating-system/2022-02-26-Memory1.md
+++ b/_posts/operating-system/2022-02-26-Memory1.md
@@ -193,7 +193,12 @@ _**Linking의 방법**_
 ![image](https://user-images.githubusercontent.com/83913407/155887334-67c3076e-b9a3-4ea4-a56f-fe4c109c7f4b.png)
 
 
+![image](https://user-images.githubusercontent.com/83913407/155949897-28d124f9-15f6-402e-b7cd-11a6b294c5d8.png)
+
 **필요이유**: 메모리의 크기는 한정적이기 때문에, 그에 따라 load되는 process의 수도 한정적이다. 보다 많은 process를 CPU를 통해 실행하기 위해서 사용하는 기법이다.
 
 
 **방법**: Swap in과 Swap out을 통해 특정 메모리에 load된 process를 디스크로 뺐다가(swap out), 그 빈자리에 디스크에 있던 다른 process를 load시킨다(swap in).
+
+
+**단점**: Swapping하는 동안 context switching하는 시간이 꽤 많이 소요된다(overhead).
