--- a/_posts/operating-system/2022-02-28-Memory2.md
+++ b/_posts/operating-system/2022-02-28-Memory2.md
@@ -41,13 +41,13 @@ _**특징**_
 3. <u>Hole의 사이즈가 제각각이다.</u>
 
 
-* ### First-fit
+* #### First-fit
 
 Hole들 중에서 프로그램의 사이즈보다 충분히 큰 Hole들 중에서 **첫번째 Hole**에 load시키는 방법
 
 ![image](https://user-images.githubusercontent.com/83913407/155991582-78943465-0b91-491d-ad83-468d9526270c.png)
 
-* ### Best-fit
+* #### Best-fit
 
 Hole들 중에서 프로그램의 사이즈보다 충분히 큰 Hole들 중에서 **가장 작은 Hole**에 load시키는 방법
 
@@ -60,7 +60,7 @@ _실제로는 sorting되어 있음(그림에는 sorting을 반영안함)._
 **특징**: 가장 작은 Hole에 load시키므로 프로그램을 할당한 뒤 뒤에 남은 hole의 공간이 작아 다른 프로그램이 할당될 가능성이 상대적으로 적음
 
 
-* ### Worst-fit
+* #### Worst-fit
 
 Hole들 중에서 프로그램의 사이즈보다 충분히 작은 Hole들 중에서 **가장 큰 Hole**에 load시키는 방법
 
@@ -86,12 +86,12 @@ _실제로는 sorting되어 있음(그림에는 sorting을 반영안함)._
 
 실제 1020byte크기의 program을 memory에 할당할 때 딱 1020byte로 load되지 않고 program보다 약간 큰 1024byte크기로 load된다.
 
-* ### External Fragmentation 
+* #### External Fragmentation 
 
 Fragmentation중 할당된 공간 외부에 생기는 공간
 
 
-* ### Internal Fragmentation
+* #### Internal Fragmentation
 
 메모리에 할당되었지만, 실제 사용되지는 않고 남아있는 부분
 
