--- a/_posts/etc/2023-08-03-wsl.md
+++ b/_posts/etc/2023-08-03-wsl.md
@@ -15,7 +15,7 @@ wsl is Windows Subsystem for Linux. You can use Linux in the windows system with
 
 #### wsl1 vs wsl2 
 
-https://learn.microsoft.com/en-us/windows/wsl/compare-versions
+<https://learn.microsoft.com/en-us/windows/wsl/compare-versions>
 
 
 ![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/6d81fdb7-2091-4a6e-8d73-b1290eea110a)
@@ -28,7 +28,10 @@ https://learn.microsoft.com/en-us/windows/wsl/compare-versions
 
 If you don't have wsl1 in your PC, you can just follow the instruction by MS to install. but if you already have old version of wsl on windows, you should follow this process
 
+
+
 * #### process
+
 
 1. You should turn on the windows hypervisior platform and virtual machine platform.
    Find search "the turn windows features on or off" in your PC, and turn them on
@@ -37,13 +40,16 @@ If you don't have wsl1 in your PC, you can just follow the instruction by MS to 
 ![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/b02b0682-3fb4-4991-bd24-0081fb7e5be1)
 
 
+
 2. Execute powershell with **authority of administrator**
 
 
 ![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/1738e46f-bb77-4812-8cd2-f985696d4484)
 
 
+
 3. Type those instructions in sequence
+
 
 
 - wsl -l -v : check the version of wsl you have
@@ -53,14 +59,17 @@ wsl -l -v
 ```
 
 
+
 - dism.exe /online /enable-feature /featurename:Microsoft-Windows-Subsystem-Linux /all /norestart
 
 ![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/f10b13ed-1433-4a0c-93d3-482f83587ad7)
 
 
+
 - dism.exe /online /enable-feature /featurename:VirtualMachinePlatform /all /norestart
 
 ![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/99c81cbc-fb26-4d5e-80a0-614d593fed6f)
+
 
 
 - wsl --update or wsl --install
@@ -71,11 +80,13 @@ wsl --update
 ```
 
 
+
 - wsl --set-default-version 2 : set the version2 of wsl by defalut
 
 ```
 wsl --set-default-version 2
 ```
+
 
 
 - wsl --set-version (distribution name) (versionNumber)
@@ -84,6 +95,8 @@ wsl --set-default-version 2
 ```
 wsl --set-version Ubuntu-20.04 2
 ```
+
+
 
 - wsl -l -v : check the version of wsl again
 
@@ -95,9 +108,7 @@ wsl --set-version Ubuntu-20.04 2
 
 - I didn't turn on the windows hypervisior platform so i had an error like this. 
 
-| Error code:wsl/service/createvm/hcs_e_service_not_available |
-|-------------------------------------------------------------|
-
+            Error code:wsl/service/createvm/hcs_e_service_not_available 
 
 - you should check the status of your windows first before you input these instructions. You must turn on the windows hypervisior platform and virtual machine platform before updating. 
 
