--- a/_posts/Node.js/security/2023-08-18-passport.md
+++ b/_posts/Node.js/security/2023-08-18-passport.md
@@ -18,7 +18,7 @@ _참고: <http://www.passport.org>_
 - Passport를 이용하면 제삼자 로그인 서비스(google,naver 등)를 이용할 수 있음(물론, 기본 local login도 가능)
 
 
-* #### How to install passport 
+#### How to install passport 
 
 ```
 npm install passport -S
@@ -28,7 +28,24 @@ npm install passport-local-sequelize
 
 ### Passport process
 
-* ### Settting to start 
+1. passport npm 설치
+
+2. passport.initialize()와 passport.session() 설정
+
+3. LocalStrategy통해 authenticate 유효성 설정
+
+4. passport의 serialize와 deserialize 실행
+
+5. 특정 경로에서 authenticate실행(성공,실패시 경로 지정해 줄 수 있음)
+
+6. (활용) authenticate가 성공적으로 실행했을 시, isAuthenticated가 true로 반환, authenticate성공 후 지속시간은 session의 maxage를 얼마로 설정하느냐에 따라 다름
+
+7. maxage시간동안 각 페이지에서 로그인을 유지시킬 수 있음. app.use를 활용해 res.locals로 로그인의 성공 여부나, 사용자의 정보를 랜더링 페이지에서 활용할 수 있음.
+
+
+#### Settting to start
+
+- **우선적으로, cookieParser와 expressSession이 앞에 설정되어있어야함** -> _expressSession에서의 maxage는 authenticate성공 후의 지속시간이 됨_
 
 - passport를 사용하기 위해서, passport를 초기화시켜주어야 함
 
@@ -47,7 +64,7 @@ app.use(passport.session());
 ![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/da7f1ab4-634e-43f7-85bd-c79abe140e2f)
 
 
-* #### check the success of authenticate 
+#### check the success of authenticate 
 
 ```js
 const LocalStrategy = require("passport-local").Strategy;
@@ -76,7 +93,7 @@ passport.use(new LocalStrategy({
 }));
 ```
 
-* #### Serialize and Deserialize 
+#### Serialize and Deserialize 
 
 - Serialize: 사용자 데이터를 저장 (직렬화)
 
@@ -106,3 +123,52 @@ passport.deserializeUser(async function(id,done){
 
 ![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/885ffaad-fae7-4b07-b13a-5d361d878d7f)
 
+
+#### Set page
+
+<작동순서>
+
+1. passport.authenticate를 통해 authenticate를 진행
+
+2. 앞서 작성한 인증 유효성을 통과하면 successRedirect로 넘어감. (실패하면 failureRedirect로 넘어감)
+
+3. authenticate가 성공적으로 실행하면, passport의 내장 함수 **isAuthenticate()**가 true로 반환(실패하면 false로 반환됨)
+
+
+```js
+app.post("/users/login", passport.authenticate("local",{
+        failureRedirect: "/users/login",
+        successRedirect: "/"
+}));
+```
+
+#### 기타 활용 
+
+- app.use를 통해 페이지가 refresh되거나, 경로가 바뀔 때 authenticate가 유효한지 판단한 후, 사용자의 id나 세부 정보를 표시할 수 있도록 할 수 있음
+
+```js
+app.use(async(req,res,next) => {
+    res.locals.loggedIn = await req.isAuthenticated(); // if authenticate successes, res.locals.loggedIn is true.(if not, it's false)
+    res.locals.currentUsers = await req.user;
+    next();
+})
+```
+**주의: res.locals로 설정된 변수들은 렌더링 된 페이지(예: ejs)에서만 접근가능, 직접 접근하면 internal error 발생**
+
+![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/bc6ca94b-0e3c-42da-846c-4d4a6e4e9ac5)
+
+
+- 랜더링 페이지들은 res.locals로 설정된 변수에 접근이 가능 
+
+```ejs
+<div id="login">
+    <% if(currentUser) { %>
+    <p> Logged in as:
+    <a href = "">
+        <%= currentUser.fullName %></a>
+        <a href = "/users/logout">Log out</a>
+    </p>
+    <% } else { %>
+    <a href="/users/login">Log in</a>
+    <%} %>
+```
