--- a/_posts/Node.js/security/2023-08-18-passport.md
+++ b/_posts/Node.js/security/2023-08-18-passport.md
@@ -126,7 +126,7 @@ passport.deserializeUser(async function(id,done){
 
 #### Set page
 
-<작동순서>
+_작동순서_
 
 1. passport.authenticate를 통해 authenticate를 진행
 
@@ -142,7 +142,8 @@ app.post("/users/login", passport.authenticate("local",{
 }));
 ```
 
-#### 기타 활용 
+
+### 기타 활용 
 
 - app.use를 통해 페이지가 refresh되거나, 경로가 바뀔 때 authenticate가 유효한지 판단한 후, 사용자의 id나 세부 정보를 표시할 수 있도록 할 수 있음
 
