add an image about PCB and fix some typo

--- a/_posts/operating-system/2021-01-06-OS(3).md
+++ b/_posts/operating-system/2021-01-06-OS(3).md
@@ -132,11 +132,13 @@ exec(): fork()로 생성한 address space를 다른 프로그램을 바꾼다.
 |Accounting information|
 |I/O status information|
 
-CPU scheduling information : 
+
 <u>CPU scheduling information</u>: CPU brust를 scheduling시 고려하여 CPU brust가 적은 process에게 CPU를 할당하는 빈도를 더 넓혀주는 등의 관리를 해줄 때 이용
 
 
 * CPU가 time-sharing방식으로 A프로그램에서 B프로그램으로 context switching하는 경우: A프로그램의 PCB를 저장한 후 B프로그램의 PCB를 가져와 program counter에 저장되어 있는 값, registor에 저장되어 있는 값 등을 참조해 프로그램의 실행되지 않은 부분부터 실행을 재개한다. 
+
+![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/41b42740-12c8-4356-b79c-2b6a6535ad44)
 
 
 ### Process State
@@ -145,24 +147,28 @@ CPU scheduling information :
 
 
 new: 프로그램이 생성(queue: job queue)
+
 ready: 프로그램이 main memory에 load됨(queue: ready queue)
+
 running: CPU에 의해 실행되고 있는 하나의 프로그램
+
 wait: I/O wait등으로 인해 특정한 행동을 기다리는 경우(queue: device queue)
 termination: 실행이 다 끝난 프로그램 
 
 * #### scheduling 
 
-1. long-term scheduling = job scheduler
+**long-term scheduling = job scheduler**
 
 new에서 ready상태로 넘어가는 process를 일정한 상태로 유지시켜준다(multiprogramming degree 조절). scheduling이 상대적으로 자주 일어나지 않는다.
 
 
-2. short-term scheduling = cpu scheduler
+**short-term scheduling = cpu scheduler**
 
 cpu가 program에 할당되도록 scheduling하는 역할을 한다. scheduling이 상대적으로 자주 일어난다.
 
 
-3. medium-term scheduler
+**medium-term scheduler**
+
 swapping시 일어나는 swap out과 swap in을 scheduling한다. 
 
 ---
@@ -178,5 +184,5 @@ swapping시 일어나는 swap out과 swap in을 scheduling한다.
 * context switch가 일어날 때는 CPU가 OS에게 할당되므로, 이 시간은 overhead이다. 따라서 context switch의 발생빈도가 많은 것은 프로그램 성능 상 좋지 않다.
 
 
-* context swtich는 전 process의 PCB를 저장하고, 실행 할 process PCB를 불러온다. 
+* context swtich시 실행 중이었던 process의 PCB를 저장하고, 실행 할 process PCB를 불러온다. 
 
