--- a/_posts/operating-system/2021-01-06-OS(3).md
+++ b/_posts/operating-system/2021-01-06-OS(3).md
@@ -133,7 +133,7 @@ exec(): fork()로 생성한 address space를 다른 프로그램을 바꾼다.
 |I/O status information|
 
 
-<u>CPU scheduling information</u>: CPU brust를 scheduling시 고려하여 CPU brust가 적은 process에게 CPU를 할당하는 빈도를 더 넓혀주는 등의 관리를 해줄 때 이용
+<u>CPU scheduling information</u>: CPU burst를 scheduling시 고려하여 CPU burst가 적은 process에게 CPU를 할당하는 빈도를 더 넓혀주는 등의 관리를 해줄 때 이용
 
 
 * CPU가 time-sharing방식으로 A프로그램에서 B프로그램으로 context switching하는 경우: A프로그램의 PCB를 저장한 후 B프로그램의 PCB를 가져와 program counter에 저장되어 있는 값, registor에 저장되어 있는 값 등을 참조해 프로그램의 실행되지 않은 부분부터 실행을 재개한다. 
