--- a/_posts/open source/2023-09-21-git(4).md
+++ b/_posts/open source/2023-09-21-git(4).md
@@ -1,5 +1,5 @@
 ---
-title: "Git - (4)"
+title: "Git - Git을 통한 협업 방식(1)"
 categories:
     - Open Source
 tags:
@@ -162,4 +162,311 @@ $ git pull --rebase origin
 
 - Maintainer의 해결해야 할 사항을 repository issue를 통해 업로드함
 
+![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/8d1f07f9-e756-4a60-a7d2-562a700b8159)
+
 - Developer은 해당 issue를 확인한 다음 본인이 issue를 해결할 것임을 알리며 임무를 수행.
+
+![image](https://github.com/dareunk/dareunk.github.io/assets/83913407/cefddbaa-f161-4784-bb27-9b3b982fdcf8)
+
+# 개발자) 작업 branch 만들기
+
+1. issue이름으로 작업 branch 만들기
+- branch이름은 기본적으로 이슈번호를 활용하여 생성
+
+```bash
+$ git branch issues1
+$ git switch issues1
+```
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/46cb40bb-a768-4198-ab07-b9a368802669/Untitled.png)
+
+# Branch관련 내용
+
+### [Branch 전략] - 병렬적 작업
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/e9bd45f5-45b6-49ba-8510-40bb659fa8e6/Untitled.png)
+
+*( 항상 이러한 형태로 이루어지는 것은 아님, Open source마다 branch전략 다를 수 있음 )*
+
+1. 배포를 위한 release버전의 default branch가 존재
+2. default branch를 fork하여 develop하는 branch 생성
+3. 거기서 기능별로 개발이 이루어지는 feature branch가 여러개 생성
+4. feature branch에서 기능이 완성이 되면 develop branch로 push 및 pull요청 보냄
+5. 다 완성된 후 develop branch가 master branch로 push 및 pull요청 보냄
+6. 다 merge된 후 배포
+7. 배포 후 운영 시 발생하는 버그에 대해서 빠르게 해결을 위해 hotfix라는 branch 생성
+8. 버그 고친 후 바로 master branch로 push 및 pull요청 보냄(버그는 빠르게 해결되야 하므로)
+
+### [branch란?]
+
+- **Commit(스냅샷) 사이를 가볍게 이동할 수 있는 포인터**
+- 40글자의 SHA-1체크섬, 41bytes 크기의 파일(40자 + 줄바꿈 문자)
+- Commit시 저장되는 것들 **- 모든 것들은 hash 값으로 저장되어 있음(hash값 기반의 탐색)**
+    - 각 파일에 대한 Blob
+        
+        *Blob: 각 파일을 나타내는 파일이라고 보면 됨*
+        
+    - 파일과 디렉토리 구조에 대한 tree들
+    - 메타데이터와 root tree를 가리키는 commit
+    
+    ![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/3fcc5817-7323-47f5-98ca-5c494941af05/Untitled.png)
+    
+    - 이전 commit이 무엇인지
+    
+    ![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/03819193-4a24-4046-9ae3-53863393de62/Untitled.png)
+    
+
+### [Default branch]
+
+- Repository를 처음 만들 때 생성되는 기본 branch
+- master branch, main branch와 같은 branch로, 깃헙에서 처음에 자동적으로 부여됨
+- 나중에 repository설정을 통해 특정 branch 이름을 default branch로 설정할 수 있음
+- 요즘 깃헙에서는 default branch로 main을 사용
+- 다른 branch와의 특별한 차이점은 없음
+- **branch는 결국 최신의 commit의 hash값을 가지고 있음**
+
+### [Branch의 종류]
+
+1. Long running branch
+    - master 또는 main branch와 같이 안정적인 branch로 commit이 늦게 이루어짐, 뒤쳐짐
+2. Topic branch
+    - 한 가지 주제/ 작업을 위해 만든 짧은 호흡의 branch
+    - issues에 관련된 branch
+    - 배포 후 생긴 bug 수정을 위해 만든 hotfix branch
+    - Merge할 시점이 되면 ‘순서에 관계없이’ merge 진행
+
+# Branch 관련 명령어
+
+### [ Branch 생성 ]
+
+- branch를 새로 생성하지만, 그 branch로 옮기지 않음 → switch를 해줘야함
+- Head는 원래의 local branch를 가르킴
+
+```bash
+$ git branch testing 
+```
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/f048a040-89ab-4734-a1ba-8f32f92dae7b/Untitled.png)
+
+### [ Branch 이동 ]
+
+- Branch를 switch하면 해당 branch기준으로 working directory가 변경됨.
+
+```bash
+$ git switch testing 
+```
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/d35bbed0-e867-4adf-8b17-d58b4eed0fbc/Untitled.png)
+
+### [ Branch 생성+이동]
+
+```bash
+$ git switch -c testing2
+```
+
+### [이전 Branch로 이동]
+
+```bash
+$ git switch -
+```
+
+### [Git log와 branch의 이동변화 한 눈에 파악]
+
+```bash
+$ git log --oneline --graph --all
+```
+
+### [ local branch가 remote의 특정 branch를 추적하게 함 ]
+
+```bash
+// $ git branch --set-<remote repository's name>-to origin/<local branch>
+$ git branch --set-upstream-to origin/issue2
+```
+
+### [ local branch목록과 추적하고 있는 remote branch의 목록 확인]
+
+- local branch만 확인하려면? $ git branch -v
+- local branch의 목록과 함께 추적하고 있는 remote branch도 함께 확인 $ git branch -vv
+- 마지막으로 fetch된 시점을 바탕으로 계산되며, 현재 local branch가 얼마나 진행되었는지 그 정도도 보여줌
+
+```bash
+$ git branch -vv
+```
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/25a2b707-be34-43e5-a04d-cfed1bfcf938/Untitled.png)
+
+### [ Remote branch 삭제 ]
+
+```bash
+$ git push origin --delete <branch이름>
+```
+
+# Branch 이동 원리
+
+### Branch가 작동하는 원리에 대해 이해하기
+
+각 브랜치 별로 commit이 이루어진다고 생각하면 이해하기 편함
+
+1. 기존 master branch에서 commit이 이루어짐
+2. 이후 testing branch를 생성 후 commit을 함
+    
+    ![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/66712839-b9af-48bb-983f-3b65e6cee3fd/Untitled.png)
+    
+3. 다시 master branch로 switch후 commit 진행 
+    - 해당 branch가 끝난 기점을 기준으로 독립적으로 commit이 이루어짐
+    - switch면 master branch 기준으로 working directory가 변경
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/cc310b74-bcf8-4f3d-bbec-2b86b9447fab/Untitled.png)
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/1a7036dd-7127-443c-967f-e611c3a6e79f/Untitled.png)
+
+# 개발자) 코드 수정 및 push
+
+1. 해당 issue 브랜치에서 issue에 관련된 문제를 수정
+    - 수정 후 상태
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/c3830383-466e-4467-a628-add59ec0af34/Untitled.png)
+
+1. 각각의 파일에 대해 add 및 commit을 해줌 
+2. 해당 issue 브랜치로 개발자의 remote repository에 push를 진행 ( **그 전에 fetch통해 remote branch의 정보를 동기화시킴**)
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/a45feab5-6e91-475c-8ad5-237ffa5d8260/Untitled.png)
+
+# 개발자) Pull request 하기
+
+1. Maintainer의 repository로 pull request를 보냄
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/1e2ceb78-2d2e-4b1d-a4ff-1395d8163ae8/Untitled.png)
+
+*Pull request시 maintainer의 화면)*
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/b9210cd6-d463-4a2f-984b-d7d6109d85fd/Untitled.png)
+
+# maintainer, committer 등의 팀원) 코드 리뷰하기
+
+1. Maintainer은 해당 내용을 확인하고 코드 리뷰 진행
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/504425b1-a560-41fb-8da6-c640f80442a1/Untitled.png)
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/7e71f165-e0f9-4ba6-8378-3899c5ca5906/Untitled.png)
+
+> Comment: feedback만 줌
+> 
+> 
+> Approve: feedback과 동시에 merge 수락
+> 
+> Request changes: feedback을 주고, 개발자는 해당 feedback을 반영하여 다시 pull request를 진행해야함
+> 
+1. 개발자는 해당 feedback 확인을 알려주고, maintainer의 요청대로 코드를 수정하겠다고 알려줌
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/408e2b72-80cf-4801-a992-20f9e56bab5f/Untitled.png)
+
+# 개발자) 코드 리뷰 반영하기
+
+수정 후 fetch 진행 후 문제가 있으면 [해당사항 진행](https://www.notion.so/Open-Source-4-02ac03e43c284a06acb8c2f74bac723c?pvs=21) , 문제 없으면( Maintainer repository에 수정X) Push  → 기존의 pull request 반영되어 있음 
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/6985a672-ef71-419d-8cf9-6d3b08df05c3/Untitled.png)
+
+# Maintainer) Pull request merge하기
+
+Maintainer은 해당 수정사항을 보고 feedback을 주고 수정 후 다시 pull request를 하라고 요청하거나, 아니면 main branch에 merge 
+
+*feedback과 함께 merge승인을 준 경우 )*
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/fbaa1b4c-93f8-40ba-82cb-aaa2e68bb864/Untitled.png)
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/2836714f-35ef-46c6-b9b7-119aa777ddad/Untitled.png)
+
+# 개발자) 작업 branch 삭제
+
+```bash
+$ git push --delete origin issue3
+```
+
+# + Maintainer의 Repository에 수정이 생긴 경우
+
+- Feedback을 반영하기 위해 코드를 수정하는 도중 Maintainer의 repository에 다른 사람으로부터의 merge가 반영돼 같은 파일에 변경사항이 생긴 경우가 발생할 수 있음
+- 만약 개발자의 repository에서 fetch를 해주지 않고 수정 후 pull request를 해주면 error가 발생
+1. git fetch <remote repository> 
+    - 이 경우에는 open source, 즉 maintainer의 remote repository가 됨
+2. git merge <remote repository name / default branch> 또는 rebase 진행
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/748502e4-a296-4ba7-93a0-b55e8d7edbf2/Untitled.png)
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/3d7c8563-4e82-4300-9d9e-61d1daf14c12/Untitled.png)
+
+- 발생한 **merge conflict 해결**
+    - 수동으로 충돌 파일을 열어서 해결해야 함.
+    
+    ![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/47fc40dd-bc25-4be3-880d-a5b146ec1a93/Untitled.png)
+    
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/234d0daf-bf6e-4bff-bd0b-1209ea45b854/Untitled.png)
+
+- merge conflict 해결 후 다시 push진행
+- feedback받은 pull request들어가보면 자동으로 수정사항 반영되어있음
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/95835282-52ad-4823-986b-4b2713eee859/Untitled.png)
+
+# + Rebase와 Merge의 차이
+
+- 둘 다 한 branch에서 다른 branch로 합치는 방법
+- 최종 결과물은 동일
+- but, git log history가 다름
+- 결론적으로, rebase가 더 깔끔한 commit history를 만듦
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/1c2d26d2-353a-4005-90d0-2599138b83a8/Untitled.png)
+
+# + 도중에 작업을 변경
+
+Maintainer로부터 feedback을 받기 전까지, 발생한 다른 issue들에 대해 처리하는 도중, maintainer로부터 feedback을 받아 전에 처리하던 작업으로 돌아가야 하는 경우 발생
+
+1. git stash push를 통해 기존 내용 저장
+2. 작업하고자 하는 branch로 변경
+3. 작업 후 원래대로 돌아오기 위해 git stash apply 또는 git stash apply - -index진행
+
+- 기존에 작업하던 내용을 임시 저장 - $ git stash push
+
+```bash
+$ git stash push 
+```
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/d0752826-e12c-4d5f-83ac-219f501653f2/Untitled.png)
+
+- working directory, staged 내용 깨끗해짐
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/e5678591-836e-4d4c-980c-54c7031a1ca7/Untitled.png)
+
+- 저장한 stash 목록 확인 - $ git stash list
+
+```bash
+$ git stash list
+```
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/0751c806-05c5-4eff-a397-fb62cc9d9785/Untitled.png)
+
+- 다른 branch 작업 후에 다시 원래 내용 복원 - $ git stash apply 또는 $ git stash apply - -index
+    - git stash apply: 작업 후 원래 내용 복원
+    - git stash apply - -index: 작업 후 원래 내용 복원 및 Staged 상태까지 복원
+
+```bash
+$ git stash apply
+```
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/50b26090-d1a7-46e0-a3ad-b6fb33cfa7da/Untitled.png)
+
+```bash
+$ git stash apply --index
+```
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a6a79d52-61c8-421d-ac55-5ace4ee6b757/44a44391-e4d6-412b-8e1d-40c98b753b6c/Untitled.png)
+
+- 해당  stash 삭제 - git stash drop
+    - index를 지정해주지 않으면, 최신 stash부터 삭제 (index가 큰 순)
+
+```bash
+$ git stash drop <index>
+```
+
+- stash에서 내용 복원 후 제거 동시에 진행 - git stash pop
+    - $ git stash apply + $git stash drop
